poke/testsuite/poke.pkl/struct-types-diag-10.pk
/* { dg-do compile } */

deftype Bar =
  struct
  {
    int i;
    void j; /* { dg-error "invalid type" } */
    defun ja = void: {}
  };
